# xbmc-addons

./: .gitignore  .gitmodules
pvr.kartina.tv/: CMakeLists.txt
pvr.kartina.tv/cmake/modules/: FindLibCURL.cmake  FindLibJSONC.cmake
pvr.kartina.tv/src/: client.cpp  kartinatvclient.cpp  kartinatvclient.h
pvr.kartina.tv/src/addons/: addon.xml.in
pvr.kartina.tv/src/addons/resources/: settings.xml
script.module.imdbinfo/: LICENSE.gpl  addon.xml
script.module.imdbinfo/lib/: IMDBInfo.py
